<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center|fill_horizontal" />

    <LinearLayout
        android:id="@+id/search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:entries="@array/search_choices" />

        <EditText
            android:id="@+id/searchNb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:hint="0"
            android:inputType="number"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionSearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <CheckBox
            android:id="@+id/isWithNearestStation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".55"
            android:checked="false"
            android:text="@string/nearest_station"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/prefixUnity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="right"
            android:text="@string/at_least_from"
            android:textSize="13dp"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/searchMaxM"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:inputType="number"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/distanceUnity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:text="@string/meter_unit"
            android:textSize="14dp"
            android:visibility="invisible" />

    </LinearLayout>

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@id/optionSearch"
        android:layout_centerHorizontal="true"
        android:drawableRight="@drawable/ic_clear"
        android:hint="@string/search_hint"
        android:inputType="textAutoCorrect" />

    <LinearLayout
        android:id="@+id/stationLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/autoCompleteTextView"
        android:weightSum="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/stationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/stationAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="10dp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:weightSum="1"
            android:minHeight="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/stationNbBikes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.20"
                android:gravity="center"
                android:textSize="30dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.20"
                android:gravity="center"
                android:src="@drawable/ic_bike" />

            <TextView
                android:id="@+id/stationNbAttaches"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.20"
                android:gravity="center"
                android:textSize="30dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.20"
                android:src="@drawable/ic_attach" />

            <ImageView
                android:id="@+id/img_tpe"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="0.20" />

        </LinearLayout>


        <TextView
            android:id="@+id/stationLastUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:textStyle="italic" />

    </LinearLayout>

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.MapFragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:apiKey="@string/mapKey" />

</LinearLayout>